--- a/Config/DefaultVaRest.ini
+++ b/Config/DefaultVaRest.ini
@@ -1,5 +1,5 @@
 [CoreRedirects]
-+PackageRedirects=(OldName="/VaRestPlugin/", NewName="/VaRest/", MatchSubstring=true)
++PackageRedirects=(OldName="/VaRestPlugin/...", NewName="/VaRest/", MatchWildcard=true)
 +ClassRedirects=(OldName="/Script/VaRestPlugin.VaRestJsonObject",NewName="/Script/VaRest.VaRestJsonObject")
 +ClassRedirects=(OldName="/Script/VaRestPlugin.VaRestJsonValue",NewName="/Script/VaRest.VaRestJsonValue")
 +ClassRedirects=(OldName="/Script/VaRestPlugin.VaRestLibrary",NewName="/Script/VaRest.VaRestLibrary")
