--- a/VaRestX.uplugin
+++ b/VaRestX.uplugin
@@ -10,16 +10,36 @@
 	"Category": "Network",
 	"DocsURL": "https://bit.ly/VaRest-Docs",
 	"SupportURL": "https://github.com/AboveConstraints/VaRestX",
-	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e47be161e7a24e928560290abd5dcc4f",
+	"FabURL": "com.epicgames.launcher://ue/Fab/product/910bf08c-c414-4f3a-8b0c-588ee098a443"
 	"Modules": [
 		{
 			"Name": "VaRest",
 			"Type": "Runtime",
-			"LoadingPhase": "PreDefault"
+			"LoadingPhase": "PreDefault",
+			"PlatformAllowList": [
+				"LinuxArm64",
+				"Mac",
+				"TVOS",
+				"VisionOS",
+				"Windows",
+				"Android",
+				"IOS",
+				"Linux"
+			]
 		},
 		{
 			"Name": "VaRestEditor",
-			"Type": "UncookedOnly"
+			"Type": "UncookedOnly",
+				"PlatformAllowList": [
+				"LinuxArm64",
+				"Mac",
+				"TVOS",
+				"VisionOS",
+				"Windows",
+				"Android",
+				"IOS",
+				"Linux"
+			]
 		}
 	]
 }
